--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1110,7 +1110,7 @@
 
 /* Goto Next */
 
-	.goto-next {
+	.goto-next .goto-next-black {
 		border: 0;
 		bottom: 0;
 		display: block;
@@ -1187,7 +1187,7 @@
 			position: absolute;
 		}
 
-		.goto-next {
+		.goto-next .goto-next-black {
 			@include vendor('transform', 'translate(0,0)');
 			@include vendor('transition', 'transform 0.75s ease, opacity 1s ease-in');
 			@include vendor('transition-delay', '0.5s');
@@ -1262,7 +1262,7 @@
 				opacity: 0;
 			}
 
-			.goto-next {
+			.goto-next.goto-next-black {
 				@include vendor('transform', 'translate(0,1.5em)');
 				opacity: 0;
 			}
@@ -1793,7 +1793,7 @@
 					}
 				}
 
-				.goto-next {
+				.goto-next .goto-next-black {
 					display: none;
 				}
 			}
@@ -1809,7 +1809,7 @@
 			#banner {
 				background-attachment: scroll;
 
-				.goto-next {
+				.goto-next .goto-next-black {
 					height: 7em;
 				}
 
@@ -1900,7 +1900,7 @@
 
 		/* Goto Next */
 
-			.goto-next {
+			.goto-next .goto-next-black {
 				&:before {
 					height: 0.8em;
 					margin: -0.4em 0 0 -0.6em;
